update links & equipo

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 </figure>
 
                 <span class="g-pos-abs g-top-30 g-left-30">
-                  <a class="btn btn-sm text-uppercase g-font-weight-700 g-font-size-11 g-color-gray-dark-v3 g-color-white--hover g-bg-white g-bg-primary--hover rounded-0 g-py-6 g-px-10" href="#!">
+                  <a class="btn btn-sm text-uppercase g-font-weight-700 g-font-size-11 g-color-gray-dark-v3 g-color-white--hover g-bg-white g-bg-primary--hover rounded-0 g-py-6 g-px-10" href="https://blockchain.tandil.dev">
                     Blockchain
                   </a>
                 </span>
@@ -154,7 +154,7 @@
                     <a class="g-color-white g-color-white--hover" href="https://blockchain.tandil.dev">Blockchain Meetups</a>
                   </h2>
                   <p class="g-font-size-default g-color-white-opacity-0_8 g-mb-30">Bitcoin y blockchain para todos.</p>
-                  <a class="btn btn-xl text-uppercase u-btn-primary g-font-weight-700 g-font-size-13 g-bg-transparent--hover g-brd-3 rounded-0 g-py-15 g-px-25" href="#!">
+                  <a class="btn btn-xl text-uppercase u-btn-primary g-font-weight-700 g-font-size-13 g-bg-transparent--hover g-brd-3 rounded-0 g-py-15 g-px-25" href="https://blockchain.tandil.dev">
                     Detalles
                   </a>
                 </header>
@@ -338,7 +338,7 @@
         <div class="container text-center g-max-width-750 g-mb-60">
           <div class="text-uppercase u-heading-v2-5--top g-brd-white">
             <h2 class="u-heading-v2__title g-font-weight-700 g-font-size-12 g-color-white-opacity-0_8 g-mb-10">Equipo</h2>
-            <h4 class="g-font-weight-700 g-font-size-26 g-color-white">Conozca a los profesionales</h4>
+            <h4 class="g-font-weight-700 g-font-size-26 g-color-white">Conozca al Equipo</h4>
           </div>
 
           <p class="g-color-white-opacity-0_8 mb-0">
@@ -367,6 +367,48 @@
                      "slidesToShow": 1
                    }
                  }]'>
+
+                 <div class="js-slide">
+                    <div class="text-center g-parent g-bg-white--hover g-pa-20 g-transition-0_3">
+                      <!-- Figure -->
+                      <figure class="g-pos-rel g-mb-30">
+                        <!-- Figure Image -->
+                        <img class="w-100" src="assets/img-temp/558x758/img1.jpg" alt="Image Description">
+                        <!-- End Figure Image -->
+    
+                        <!-- Figure Caption -->
+                        <figcaption>
+                          <ul class="list-unstyled g-absolute-centered opacity-0 g-opacity-1--parent-hover mb-0 g-transition-0_3">
+                            <li class="g-mb-5">
+                              <a class="u-icon-v3 u-icon-size--sm g-color-gray-dark-v5 g-color-white--hover g-bg-white g-bg-primary--hover" href="#!">
+                                <i class="fa fa-twitter"></i>
+                              </a>
+                            </li>
+                            <li class="mb-0">
+                              <a class="u-icon-v3 u-icon-size--sm g-color-gray-dark-v5 g-color-white--hover g-bg-white g-bg-primary--hover" href="https://www.linkedin.com/in/franco-berdun-b6a9315a/">
+                                <i class="fa fa-linkedin"></i>
+                              </a>
+                            </li>
+                          </ul>
+                        </figcaption>
+                        <!-- Figure Caption -->
+                      </figure>
+                      <!-- End Figure -->
+    
+                      <!-- Info -->
+                      <!-- <em class="d-block text-uppercase g-font-style-normal g-font-size-13 g-color-white g-color-gray-dark-v5--parent-hover g-mb-15">CRO</em> -->
+                      <h4 class="h5 text-uppercase g-font-weight-700 g-color-white g-color-black--parent-hover g-mb-15">Franco
+                        <br>
+                        Berdún
+                      </h4>
+                      <p class="g-font-size-default g-color-white g-color-gray-dark-v5--parent-hover mb-0">
+                        Franco is un investigador post doctoral del CONICET. 
+                        Sus intereses son en analisis de datos, machine learning y ciudades inteligentes.
+                      </p>
+                      <!-- End Info-->
+                    </div>
+                  </div>
+
               <div class="js-slide">
                 <div class="text-center g-parent g-bg-white--hover g-pa-20 g-transition-0_3">
                   <!-- Figure -->
@@ -395,7 +437,7 @@
                   <!-- End Figure -->
 
                   <!-- Info -->
-                  <em class="d-block text-uppercase g-font-style-normal g-font-size-13 g-color-white g-color-gray-dark-v5--parent-hover g-mb-15">CTO</em>
+                  <!-- <em class="d-block text-uppercase g-font-style-normal g-font-size-13 g-color-white g-color-gray-dark-v5--parent-hover g-mb-15">CTO</em> -->
                   <h4 class="h5 text-uppercase g-font-weight-700 g-color-white g-color-black--parent-hover g-mb-15">Matías
                     <br>
                     Oveja Smith
@@ -407,6 +449,46 @@
                   <!-- End Info-->
                 </div>
               </div>
+
+              <div class="js-slide">
+                  <div class="text-center g-parent g-bg-white--hover g-pa-20 g-transition-0_3">
+                    <!-- Figure -->
+                    <figure class="g-pos-rel g-mb-30">
+                      <!-- Figure Image -->
+                      <img class="w-100" src="assets/img-temp/558x758/img1.jpg" alt="Image Description">
+                      <!-- End Figure Image -->
+  
+                      <!-- Figure Caption -->
+                      <figcaption>
+                        <ul class="list-unstyled g-absolute-centered opacity-0 g-opacity-1--parent-hover mb-0 g-transition-0_3">
+                          <li class="g-mb-5">
+                            <a class="u-icon-v3 u-icon-size--sm g-color-gray-dark-v5 g-color-white--hover g-bg-white g-bg-primary--hover" href="#!">
+                              <i class="fa fa-twitter"></i>
+                            </a>
+                          </li>
+                          <li class="mb-0">
+                            <a class="u-icon-v3 u-icon-size--sm g-color-gray-dark-v5 g-color-white--hover g-bg-white g-bg-primary--hover" href="https://www.linkedin.com/in/pablo-rivera-a3aa0b128/">
+                              <i class="fa fa-linkedin"></i>
+                            </a>
+                          </li>
+                        </ul>
+                      </figcaption>
+                      <!-- Figure Caption -->
+                    </figure>
+                    <!-- End Figure -->
+  
+                    <!-- Info -->
+                    <!-- <em class="d-block text-uppercase g-font-style-normal g-font-size-13 g-color-white g-color-gray-dark-v5--parent-hover g-mb-15">WEBMASTER</em> -->
+                    <h4 class="h5 text-uppercase g-font-weight-700 g-color-white g-color-black--parent-hover g-mb-15">Pablo
+                      <br>
+                      Rivera
+                    </h4>
+                    <p class="g-font-size-default g-color-white g-color-gray-dark-v5--parent-hover mb-0">
+                      Pablo es un desarrollador web oriundo de Laprida, Bs. As, Argentina.    
+                    </p>
+                    <!-- End Info-->
+                  </div>
+                </div>
 
             </div>
           </div>
@@ -420,7 +502,7 @@
         <div class="container g-max-width-750 g-mb-80">
           <div class="text-uppercase text-center u-heading-v2-5--top g-brd-primary">
             <h2 class="u-heading-v2__title g-font-weight-700 g-font-size-12 g-color-gray-dark-v5 g-mb-10">Servicios</h2>
-            <h4 class="g-font-weight-700 g-font-size-26 g-color-black">Cursos y asesoria</h4>
+            <h4 class="g-font-weight-700 g-font-size-26 g-color-black">Cursos</h4>
           </div>
         </div>
 
@@ -509,13 +591,20 @@
           <div class="row g-mb-60">
             <div class="col-md-6 g-pl-100--lg">
               <div class="text-uppercase u-heading-v6-2 g-mb-15 g-ml-minus-55 g-ml-minus-90--md">
-                <h4 class="u-heading-v6__subtitle g-font-weight-700 g-font-size-12 g-color-gray-dark-v5 g-ml-2 g-mb-10">Our partners</h4>
-                <h2 class="u-heading-v6__title g-font-weight-700 g-font-size-26 g-brd-primary mb-0">Who trusts us</h2>
+                <h4 class="u-heading-v6__subtitle g-font-weight-700 g-font-size-12 g-color-gray-dark-v5 g-ml-2 g-mb-10">
+                  Nuestros partners
+                </h4>
+                <h2 class="u-heading-v6__title g-font-weight-700 g-font-size-26 g-brd-primary mb-0">
+                  Confian en nosotros
+                </h2>
               </div>
             </div>
 
             <div class="col-md-6">
-              <p class="g-color-gray-dark-v4 g-pl-50--md mb-0">Etiam dolor tortor, egestas a libero eget, sollicitudin maximus nulla. Nunc vitae maximus ipsum. Vestibulum sodales nisi massa, vitae blandit massa luctus id.</p>
+              <p class="g-color-gray-dark-v4 g-pl-50--md mb-0">
+                Etiam dolor tortor, egestas a libero eget, sollicitudin maximus nulla. Nunc vitae maximus ipsum. Vestibulum sodales nisi massa, 
+                vitae blandit massa luctus id.
+              </p>
             </div>
           </div>
 
