--- a/index.html
+++ b/index.html
@@ -489,7 +489,46 @@
                     <!-- End Info-->
                   </div>
                 </div>
-
+                <div class="js-slide">
+                  <div class="text-center g-parent g-bg-white--hover g-pa-20 g-transition-0_3">
+                    <!-- Figure -->
+                    <figure class="g-pos-rel g-mb-30">
+                      <!-- Figure Image -->
+                      <img class="w-100" src="assets/img-temp/558x758/img1.jpg" alt="Image Description">
+                      <!-- End Figure Image -->
+  
+                      <!-- Figure Caption -->
+                      <figcaption>
+                        <ul class="list-unstyled g-absolute-centered opacity-0 g-opacity-1--parent-hover mb-0 g-transition-0_3">
+                          <li class="g-mb-5">
+                            <a class="u-icon-v3 u-icon-size--sm g-color-gray-dark-v5 g-color-white--hover g-bg-white g-bg-primary--hover" href="#!">
+                              <i class="fa fa-twitter"></i>
+                            </a>
+                          </li>
+                          <li class="mb-0">
+                            <a class="u-icon-v3 u-icon-size--sm g-color-gray-dark-v5 g-color-white--hover g-bg-white g-bg-primary--hover" href="">
+                              <i class="fa fa-linkedin"></i>
+                            </a>
+                          </li>
+                        </ul>
+                      </figcaption>
+                      <!-- Figure Caption -->
+                    </figure>
+                    <!-- End Figure -->
+  
+                    <!-- Info -->
+                    <!-- <em class="d-block text-uppercase g-font-style-normal g-font-size-13 g-color-white g-color-gray-dark-v5--parent-hover g-mb-15">CRO</em> -->
+                    <h4 class="h5 text-uppercase g-font-weight-700 g-color-white g-color-black--parent-hover g-mb-15">Ezequiel
+                      <br>
+                      Avalos
+                    </h4>
+                    <p class="g-font-size-default g-color-white g-color-gray-dark-v5--parent-hover mb-0">
+                      Ezequiel es un técnico informatico de Mar del plata,Bs.As,Argemtina
+                    </p>
+                    <!-- End Info-->
+                  </div>
+                </div>
+                
             </div>
           </div>
           <!-- End Team Block -->
