Correcion-new-article-javascrip

--- a/index.html
+++ b/index.html
@@ -181,9 +181,9 @@
                     Eventos gratuitos mensuales.
                   </p>
                   <h2 class="text-uppercase g-line-height-1 g-font-weight-700 g-font-size-40 g-mb-10">
-                    <a class="g-color-white g-color-white--hover" href="https://www.meetup.com/es/Tandil-js/">Relativa a javascript</a>
+                    <a class="g-color-white g-color-white--hover" href="https://www.meetup.com/es/Tandil-js/">Tandil.js</a>
                   </h2>
-                  <p class="g-font-size-default g-color-white-opacity-0_8 g-mb-30">javascript para todos.</p>
+                  <p class="g-font-size-default g-color-white-opacity-0_8 g-mb-30">Full Stack desde cero.</p>
                   <a class="btn btn-xl text-uppercase u-btn-primary g-font-weight-700 g-font-size-13 g-bg-transparent--hover g-brd-3 rounded-0 g-py-15 g-px-25" href="https://www.meetup.com/es/Tandil-js/">
                     Detalles
                   </a>
