Update-Sponsors-Imag

--- a/index.html
+++ b/index.html
@@ -681,25 +681,25 @@
             <div class="row text-center mx-0 g-ml-minus-1 g-mb-minus-1">
               <div class="col-sm-3 col-lg-2 px-0">
                 <div class="g-brd-left g-brd-bottom g-theme-brd-gray-light-v4 g-py-40">
-                  <img class="img-fluid g-width-100 g-opacity-0_8--hover g-transition-0_2" src="assets/img-temp/250x200/img1.png" alt="Image Description">
+                  <img class="img-fluid g-width-100 g-opacity-0_8--hover g-transition-0_2" src="assets/img/agencia_tandil.jpg" alt="Image Description">
                 </div>
               </div>
 
               <div class="col-sm-3 col-lg-2 px-0">
                 <div class="g-brd-left g-brd-bottom g-theme-brd-gray-light-v4 g-py-40">
-                  <img class="img-fluid g-width-100 g-opacity-0_8--hover g-transition-0_2" src="assets/img-temp/250x200/img2.png" alt="Image Description">
+                  <img class="img-fluid g-width-100 g-opacity-0_8--hover g-transition-0_2" src="assets/img/municipio_tandil.jpg" alt="Image Description">
                 </div>
               </div>
 
               <div class="col-sm-3 col-lg-2 px-0">
                 <div class="g-brd-left g-brd-bottom g-theme-brd-gray-light-v4 g-py-40">
-                  <img class="img-fluid g-width-100 g-opacity-0_8--hover g-transition-0_2" src="assets/img-temp/250x200/img3.png" alt="Image Description">
+                  <img class="img-fluid g-width-100 g-opacity-0_8--hover g-transition-0_2" src="assets/img/xoor_domain.svg" alt="Image Description">
                 </div>
               </div>
 
               <div class="col-sm-3 col-lg-2 px-0">
                 <div class="g-brd-left g-brd-bottom g-theme-brd-gray-light-v4 g-py-40">
-                  <img class="img-fluid g-width-100 g-opacity-0_8--hover g-transition-0_2" src="assets/img-temp/250x200/img4.png" alt="Image Description">
+                  <img class="img-fluid g-width-100 g-opacity-0_8--hover g-transition-0_2" src="assets/img/produck.png" alt="Image Description">
                 </div>
               </div>
 
