typos fixed; deleted section Numbers

--- a/index.html
+++ b/index.html
@@ -57,9 +57,6 @@
                   <li class="nav-item g-mr-3--lg g-mb-5 g-mb-0--lg active">
                     <a href="#home" class="nav-link">Que hacemos</a>
                   </li>
-                  <li class="nav-item d-lg-none d-xl-block g-mx-3--lg g-mb-5 g-mb-0--lg">
-                    <a href="#ourNumbers" class="nav-link">Metricas</a>
-                  </li>
                   <li class="nav-item g-mx-3--lg g-mb-5 g-mb-0--lg">
                     <a href="#teachers" class="nav-link">Equipo</a>
                   </li>
@@ -231,135 +228,6 @@
               <!-- End Article -->
             </div>
       
-          </div>
-        </div>
-      </section>
-      <!-- End Section Content -->
-
-
-      <!-- Section Content -->
-      <section id="ourNumbers" class="g-py-100">
-        <div class="container">
-          <div class="row g-mb-60">
-            <div class="col-md-6 g-pl-100--lg">
-              <div class="text-uppercase u-heading-v6-2 g-mb-15 g-ml-minus-55 g-ml-minus-90--md">
-                <h4 class="u-heading-v6__subtitle g-font-weight-700 g-font-size-12 g-color-gray-dark-v5 g-ml-2 g-mb-10">Metricas del</h4>
-                <h2 class="u-heading-v6__title g-font-weight-700 g-font-size-26 g-brd-primary mb-0">Trabajo duro</h2>
-              </div>
-            </div>
-
-            <div class="col-md-6">
-              <p class="g-color-gray-dark-v4 g-pl-50--md mb-0">
-                Desde nuestra primera meetup nos encontramos capacitando y brindando conferencias de manera gratuita.
-              </p>
-            </div>
-          </div>
-
-          <div class="row">
-            <!-- Counter Pie Chart -->
-            <div class="col-md-6 g-mb-60">
-              <div class="d-lg-flex">
-                <div class="js-pie-rtl u-chart-pie-v1 g-brd-primary g-color-black g-height-140 g-width-140 g-mb-30 g-mb-0--lg mx-auto g-mr-30--lg"
-                     data-circles-value="4"
-                     data-circles-max-value="10"
-                     data-circles-bg-color="#ffffff"
-                     data-circles-fg-color="#6bda95"
-                     data-circles-radius="70"
-                     data-circles-stroke-width="2"
-                     data-circles-font-size="35"
-                     data-circles-duration="2000"
-                     data-circles-scroll-animate="true">
-                </div>
-
-                <div class="g-line-height-2 g-pt-50--md">
-                  <h4 class="text-uppercase g-font-weight-700 g-font-size-15 g-mb-10">
-                    Meetups
-                  </h4>
-                  <p class="g-color-gray-dark-v4 g-font-size-default mb-0">
-                    Encuentros realizadas desde el comienzo del año 2019 en la Ciudad de Tandil.
-                  </p>
-                </div>
-              </div>
-            </div>
-            <!-- End Counter Pie Chart -->
-
-            <!-- Counter Pie Chart -->
-            <div class="col-md-6 g-mb-60">
-              <div class="d-lg-flex">
-                <div class="js-pie-rtl u-chart-pie-v1 g-brd-primary g-color-black g-height-140 g-width-140 g-mb-30 g-mb-0--lg mx-auto g-mr-30--lg"
-                     data-circles-value="6"
-                     data-circles-max-value="10"
-                     data-circles-bg-color="#ffffff"
-                     data-circles-fg-color="#6bda95"
-                     data-circles-radius="70"
-                     data-circles-stroke-width="2"
-                     data-circles-font-size="35"
-                     data-circles-duration="2000"
-                     data-circles-scroll-animate="true">
-                </div>
-
-                <div class="g-line-height-2 g-pt-50--md">
-                  <h4 class="text-uppercase g-font-weight-700 g-font-size-15 g-mb-10">
-                    Expositores
-                  </h4>
-                  <p class="g-color-gray-dark-v4 g-font-size-default mb-0">
-                    Diversidad de temas, áreas, afinidades, puntos de vista y opiniones.
-                  </p>
-                </div>
-              </div>
-            </div>
-            <!-- End Counter Pie Chart -->
-          </div>
-
-          <div class="row">
-            <!-- Counter Pie Chart -->
-            <div class="col-md-6 g-mb-60 g-mb-0--md">
-              <div class="d-lg-flex">
-                <div class="js-pie-rtl u-chart-pie-v1 g-brd-primary g-color-black g-height-140 g-width-140 g-mb-30 g-mb-0--lg mx-auto g-mr-30--lg"
-                     data-circles-value="53"
-                     data-circles-max-value="100"
-                     data-circles-bg-color="#ffffff"
-                     data-circles-fg-color="#6bda95"
-                     data-circles-radius="70"
-                     data-circles-stroke-width="2"
-                     data-circles-font-size="35"
-                     data-circles-duration="2000"
-                     data-circles-scroll-animate="true">
-                </div>
-
-                <div class="g-line-height-2 g-pt-50--md">
-                  <h4 class="text-uppercase g-font-weight-700 g-font-size-15 g-mb-10">Asistentes</h4>
-                  <p class="g-color-gray-dark-v4 g-font-size-default mb-0">
-                    Personas participaron y nos compartieron su feedback.</p>
-                </div>
-              </div>
-            </div>
-            <!-- End Counter Pie Chart -->
-
-            <!-- Counter Pie Chart -->
-            <div class="col-md-6">
-              <div class="d-lg-flex">
-                <div class="js-pie-rtl u-chart-pie-v1 g-brd-primary g-color-black g-height-140 g-width-140 g-mb-30 g-mb-0--lg mx-auto g-mr-30--lg"
-                     data-circles-value="5"
-                     data-circles-max-value="10"
-                     data-circles-bg-color="#ffffff"
-                     data-circles-fg-color="#6bda95"
-                     data-circles-radius="70"
-                     data-circles-stroke-width="2"
-                     data-circles-font-size="35"
-                     data-circles-duration="2000"
-                     data-circles-scroll-animate="true">
-                </div>
-
-                <div class="g-line-height-2 g-pt-50--md">
-                  <h4 class="text-uppercase g-font-weight-700 g-font-size-15 g-mb-10">Contribuidores</h4>
-                  <p class="g-color-gray-dark-v4 g-font-size-default mb-0">
-                    Organizaciones que soportan estos eventos.
-                  </p>
-                </div>
-              </div>
-            </div>
-            <!-- End Counter Pie Chart -->
           </div>
         </div>
       </section>
@@ -553,7 +421,7 @@
                       Avalos
                     </h4>
                     <p class="g-font-size-default g-color-white g-color-gray-dark-v5--parent-hover mb-0">
-                      Técnico informáico de Mar del Plata, Bs.As., Argentina
+                      Técnico informático de Mar del Plata, Bs.As., Argentina
                     </p>
                     <!-- End Info-->
                   </div>
