--- a/index.html
+++ b/index.html
@@ -67,18 +67,8 @@
 
                 <ul class="list-inline mb-0">
                   <li class="list-inline-item g-mr-10">
-                    <a class="u-icon-v3 g-width-35 g-height-35 g-font-size-default g-theme-color-gray-light-v2 g-color-white--hover g-theme-bg-gray-light-v3 g-bg-primary--hover g-rounded-50x g-transition-0_2 g-transition--ease-in" href="#!">
-                      <i class="fa fa-twitter"></i>
-                    </a>
-                  </li>
-                  <li class="list-inline-item g-mr-10">
-                    <a class="u-icon-v3 g-width-35 g-height-35 g-font-size-default g-theme-color-gray-light-v2 g-color-white--hover g-theme-bg-gray-light-v3 g-bg-primary--hover g-rounded-50x g-transition-0_2 g-transition--ease-in" href="#!">
-                      <i class="fa fa-pinterest-p"></i>
-                    </a>
-                  </li>
-                  <li class="list-inline-item">
-                    <a class="u-icon-v3 g-width-35 g-height-35 g-font-size-default g-theme-color-gray-light-v2 g-color-white--hover g-theme-bg-gray-light-v3 g-bg-primary--hover g-rounded-50x g-transition-0_2 g-transition--ease-in" href="#!">
-                      <i class="fa fa-facebook"></i>
+                    <a class="u-icon-v3 g-width-35 g-height-35 g-font-size-default g-theme-color-gray-light-v2 g-color-white--hover g-theme-bg-gray-light-v3 g-bg-primary--hover g-rounded-50x g-transition-0_2 g-transition--ease-in" href="https://www.linkedin.com/company/tandil-dev/">
+                      <i class="fa fa-linkedin"></i>
                     </a>
                   </li>
                 </ul>
@@ -112,13 +102,12 @@
           <div class="row">
             <div class="col-md-6 g-pl-100--lg">
               <div class="text-uppercase u-heading-v6-2 g-mb-15 g-ml-minus-55 g-ml-minus-90--md">
-                <h4 class="u-heading-v6__subtitle g-font-weight-700 g-font-size-12 g-color-gray-dark-v5 g-ml-2 g-mb-10">Quienes somos</h4>
-                <h2 class="u-heading-v6__title g-font-weight-700 g-font-size-26 g-brd-primary mb-0">Equipo Tandil.dev</h2>
+                <h4 class="u-heading-v6__subtitle g-font-weight-700 g-font-size-12 g-color-gray-dark-v5 g-ml-2 g-mb-10"></h4>
+                <h2 class="u-heading-v6__title g-font-weight-700 g-font-size-26 g-brd-primary mb-0">Tandil.dev</h2>
               </div>
 
-              <p class="g-color-gray-dark-v4 g-mb-40">Somos un grupo de profesionales apasionados por la tecnología, entre ellos estudiantes, desarrolladores 
-                e investigadores del área de la Ingeniería de Software, que estamos creando un espacio para el intercambio de información y 
-                acciones.</p>
+              <p class="g-color-gray-dark-v4 g-mb-40">Somos un grupo de apasionados por la tecnología, entre ellos estudiantes, desarrolladores 
+                e investigadores del área de la Ingeniería de Software, que creamos un espacio para el intercambio de información.</p>
 
               <!-- <div class="row g-mb-30 g-mb-0--md">
                 <a class="js-fancybox-media col-md-7 g-pos-rel" href="javascript:;"
@@ -184,9 +173,9 @@
                     Eventos mensuales abiertos al público
                   </p>
                   <h2 class="text-uppercase g-line-height-1 g-font-weight-700 g-font-size-40 g-mb-10">
-                    <a class="g-color-white g-color-white--hover" href="https://blockchain.tandil.dev">Blockchain Meetups</a>
+                    <a class="g-color-white g-color-white--hover" href="https://blockchain.tandil.dev">Blockchain</a>
                   </h2>
-                  <p class="g-font-size-default g-color-white-opacity-0_8 g-mb-30">Blockchain, Bitcoin y Ethereum.</p>
+                  <p class="g-font-size-default g-color-white-opacity-0_8 g-mb-30">Criptomonedas, Contratos Inteligentes y Aplicaciones decentralizadas.</p>
                   <a class="btn btn-xl text-uppercase u-btn-primary g-font-weight-700 g-font-size-13 g-bg-transparent--hover g-brd-3 rounded-0 g-py-15 g-px-25"
                     href="https://blockchain.tandil.dev">
                     Detalles
@@ -216,9 +205,9 @@
                     Eventos mensuales abiertos al público.
                   </p>
                   <h2 class="text-uppercase g-line-height-1 g-font-weight-700 g-font-size-40 g-mb-10">
-                    <a class="g-color-white g-color-white--hover" href="https://www.meetup.com/es/Tandil-js/">Tandil.js</a>
+                    <a class="g-color-white g-color-white--hover" href="https://www.meetup.com/es/Tandil-js/">JavaScript</a>
                   </h2>
-                  <p class="g-font-size-default g-color-white-opacity-0_8 g-mb-30">Full Stack desde cero.</p>
+                  <p class="g-font-size-default g-color-white-opacity-0_8 g-mb-30">Front-end, Back-end, Database and DevOps</p>
                   <a class="btn btn-xl text-uppercase u-btn-primary g-font-weight-700 g-font-size-13 g-bg-transparent--hover g-brd-3 rounded-0 g-py-15 g-px-25"
                     href="https://www.meetup.com/es/Tandil-js/">
                     Detalles
@@ -237,8 +226,8 @@
       <section id="teachers" class="g-py-100" style="background-image: url(assets/img/pattern2.png);">
         <div class="container text-center g-max-width-750 g-mb-60">
           <div class="text-uppercase u-heading-v2-5--top g-brd-white">
-            <h2 class="u-heading-v2__title g-font-weight-700 g-font-size-12 g-color-white-opacity-0_8 g-mb-10">Equipo</h2>
-            <h4 class="g-font-weight-700 g-font-size-26 g-color-white">Profesionales y apasionados por la tecnología</h4>
+            <h2 class="u-heading-v2__title g-font-weight-700 g-font-size-12 g-color-white-opacity-0_8 g-mb-10"> </h2>
+            <h4 class="g-font-weight-700 g-font-size-26 g-color-white">Organización </h4>
           </div>
 
           <p class="g-color-white-opacity-0_8 mb-0">
@@ -302,7 +291,7 @@
                         Berdun
                       </h4>
                       <p class="g-font-size-default g-color-white g-color-gray-dark-v5--parent-hover mb-0">
-                        R. & D. en Machine Learning. Entusiasta Blockchain
+                        Research & Development
                       </p>
                       <!-- End Info-->
                     </div>
@@ -339,10 +328,10 @@
                   <!-- <em class="d-block text-uppercase g-font-style-normal g-font-size-13 g-color-white g-color-gray-dark-v5--parent-hover g-mb-15">CTO</em> -->
                   <h4 class="h5 text-uppercase g-font-weight-700 g-color-white g-color-black--parent-hover g-mb-15">Matías
                     <br>
-                    Oveja Smith
+                    O.Smith
                   </h4>
                   <p class="g-font-size-default g-color-white g-color-gray-dark-v5--parent-hover mb-0">
-                    Full Stack Developer de proyectos en Arg., Mexico, EEUU y Rep. Checa.
+                    Full Stack y DevOps
                   </p>
                   <!-- End Info-->
                 </div>
@@ -382,7 +371,7 @@
                       Rivera
                     </h4>
                     <p class="g-font-size-default g-color-white g-color-gray-dark-v5--parent-hover mb-0">
-                      Desarrollador Web Senior oriundo de Laprida, Bs.As., Argentina.    
+                      Desarrollador Web    
                     </p>
                     <!-- End Info-->
                   </div>
@@ -421,7 +410,7 @@
                       Avalos
                     </h4>
                     <p class="g-font-size-default g-color-white g-color-gray-dark-v5--parent-hover mb-0">
-                      Técnico informático de Mar del Plata, Bs.As., Argentina
+                      Técnico informático
                     </p>
                     <!-- End Info-->
                   </div>
@@ -442,19 +431,17 @@
             <div class="col-md-6 g-pl-100--lg">
               <div class="text-uppercase u-heading-v6-2 g-mb-15 g-ml-minus-55 g-ml-minus-90--md">
                 <h4 class="u-heading-v6__subtitle g-font-weight-700 g-font-size-12 g-color-gray-dark-v5 g-ml-2 g-mb-10">
-                  Partners
+                  
                 </h4>
                 <h2 class="u-heading-v6__title g-font-weight-700 g-font-size-26 g-brd-primary mb-0">
-                  Confian en nosotros
+                  Patrocinadores
                 </h2>
               </div>
             </div>
 
             <div class="col-md-6">
               <p class="g-color-gray-dark-v4 g-pl-50--md mb-0">
-                Las siguientes organizaciones de varias áreas nos proveen soporte para nuestros eventos
-                y promueven la propuesta y desarrollo de diversos proyectos.
-                            </p>
+              </p>
             </div>
           </div>
 
@@ -496,52 +483,26 @@
           <div class="container">
             <div class="row">
               <div class="col-md-6 col-lg-6">
-                <p class="g-font-size-default g-color-white-opacity-0_9 g-mb-20">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin vitae est lorem. Aenean imperdiet nisi a dolor condimentum, id ullamcorper lacus vestibulum.</p>
+                <p class="g-font-size-default g-color-white-opacity-0_9 g-mb-20"> Estamos en constante movimiento buscando ampliar los temarios, el público dirigido y aumentar la sinergia entre las entidades municipales, académicas y la industria. </p>
                 <ul class="list-inline g-mb-30 g-mb-0--md">
                   <li class="list-inline-item g-mr-10">
-                    <a class="u-icon-v3 g-width-35 g-height-35 g-font-size-default g-color-white g-color-primary--hover g-bg-primary g-bg-white--hover g-rounded-50x g-transition-0_2 g-transition--ease-in" href="#!">
-                      <i class="fa fa-twitter"></i>
-                    </a>
-                  </li>
-                  <li class="list-inline-item g-mr-10">
-                    <a class="u-icon-v3 g-width-35 g-height-35 g-font-size-default g-color-white g-color-primary--hover g-bg-primary g-bg-white--hover g-rounded-50x g-transition-0_2 g-transition--ease-in" href="#!">
-                      <i class="fa fa-pinterest-p"></i>
-                    </a>
-                  </li>
-                  <li class="list-inline-item g-mr-10">
-                    <a class="u-icon-v3 g-width-35 g-height-35 g-font-size-default g-color-white g-color-primary--hover g-bg-primary g-bg-white--hover g-rounded-50x g-transition-0_2 g-transition--ease-in" href="#!">
-                      <i class="fa fa-facebook"></i>
+                    <a class="u-icon-v3 g-width-35 g-height-35 g-font-size-default g-color-white g-color-primary--hover g-bg-primary g-bg-white--hover g-rounded-50x g-transition-0_2 g-transition--ease-in" href="https://www.linkedin.com/company/tandil-dev/">
+                      <i class="fa fa-linkedin"></i>
                     </a>
                   </li>
                 </ul>
               </div>
 
               <div class="col-md-6 col-lg-6">
-                <h2 class="text-uppercase g-font-weight-700 g-font-size-default g-color-white g-mb-20">Links utiles</h2>
+                <h2 class="text-uppercase g-font-weight-700 g-font-size-default g-color-white g-mb-20"> Hey !!!</h2>
                 <ul class="list-unstyled g-font-size-default g-color-white-opacity-0_9 g-mb-30 g-mb-0--md">
                   <li class="g-pos-rel g-pl-10 g-mb-5">
                     <i class="g-pos-abs g-top-0 g-left-0">-</i>
-                    <a class="g-color-white-opacity-0_9 g-color-white--hover g-text-underline--none--hover" href="#!">Fusce dolor libero, efficitur et lobortis</a>
-                  </li>
-                  <li class="g-pos-rel g-pl-10 g-mb-5">
-                    <i class="g-pos-abs g-top-0 g-left-0">-</i>
-                    <a class="g-color-white-opacity-0_9 g-color-white--hover g-text-underline--none--hover" href="#!">Proin fermentum turpis eget nisi</a>
-                  </li>
-                  <li class="g-pos-rel g-pl-10 g-mb-5">
-                    <i class="g-pos-abs g-top-0 g-left-0">-</i>
-                    <a class="g-color-white-opacity-0_9 g-color-white--hover g-text-underline--none--hover" href="#!">Mauris sodales tellus vel felis dapibus</a>
-                  </li>
-                  <li class="g-pos-rel g-pl-10 g-mb-5">
-                    <i class="g-pos-abs g-top-0 g-left-0">-</i>
-                    <a class="g-color-white-opacity-0_9 g-color-white--hover g-text-underline--none--hover" href="#!">Ut pulvinar tellus sed elit luctus</a>
-                  </li>
-                  <li class="g-pos-rel g-pl-10 g-mb-5">
-                    <i class="g-pos-abs g-top-0 g-left-0">-</i>
-                    <a class="g-color-white-opacity-0_9 g-color-white--hover g-text-underline--none--hover" href="#!">Proin sollicitudin turpis in massa rutrum</a>
+                    <a class="g-color-white-opacity-0_9 g-color-white--hover g-text-underline--none--hover" href="#!">Si tienes alguna inquietud o propuesta</a>
                   </li>
                   <li class="g-pos-rel g-pl-10 mb-0">
                     <i class="g-pos-abs g-top-0 g-left-0">-</i>
-                    <a class="g-color-white-opacity-0_9 g-color-white--hover g-text-underline--none--hover" href="#!">Vestibulum semper</a>
+                    <a class="g-color-white-opacity-0_9 g-color-white--hover g-text-underline--none--hover" href="#!">Ponte en contacto con nosotros </a>
                   </li>
                 </ul>
               </div>
