feat(Add Eze picture):

--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
                     <!-- Figure -->
                     <figure class="g-pos-rel g-mb-30">
                       <!-- Figure Image -->
-                      <img class="w-100" src="assets/img/ezequiel.jpeg" alt="Image Description">
+                      <img class="w-100" src="assets/img/eze.jpg" alt="Image Description">
                       <!-- End Figure Image -->
   
                       <!-- Figure Caption -->
