fix(Footer): fix link

--- a/index.html
+++ b/index.html
@@ -498,11 +498,10 @@
                 <ul class="list-unstyled g-font-size-default g-color-white-opacity-0_9 g-mb-30 g-mb-0--md">
                   <li class="g-pos-rel g-pl-10 g-mb-5">
                     <i class="g-pos-abs g-top-0 g-left-0">-</i>
-                    <a class="g-color-white-opacity-0_9 g-color-white--hover g-text-underline--none--hover" href="#!">Si tienes alguna inquietud o propuesta</a>
-                  </li>
-                  <li class="g-pos-rel g-pl-10 mb-0">
-                    <i class="g-pos-abs g-top-0 g-left-0">-</i>
-                    <a class="g-color-white-opacity-0_9 g-color-white--hover g-text-underline--none--hover" href="#!">Ponte en contacto con nosotros </a>
+                    <a class="g-color-white-opacity-0_9 g-color-white--hover g-text-underline--none--hover" href="https://www.linkedin.com/company/tandil-dev/">
+                      Si tienes alguna inquietud o propuesta
+                      Ponte en contacto con nosotros
+                    </a>
                   </li>
                 </ul>
               </div>
